# AMF-Research-Suite

./: CHANGELOG.md  LICENSE  README.md  requirements.txt
.devcontainer/: devcontainer.json
amf_v40/: AUTHORS  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml  requirements.txt  streamlit_app.py
amf_v40/amf/: __init__.py  cli.py
amf_v40/amf/corpus/: __init__.py  ingest.py  normalize.py
amf_v40/amf/dpas/: __init__.py  constraints.py  validator.py
amf_v40/amf/render/: __init__.py  generate_bg.py
amf_v40/amf/stats/: __init__.py  adjacency.py  entropy.py  markov.py  positional.py  significance.py
amf_v40/amf/validation/: __init__.py  falsification.py  pipeline.py  preregistration.py  report.py
amf_v40/app/: Home.py
amf_v40/app/components/: header.py  sidebar.py
amf_v40/app/pages/: 0_System_Check.py  10_Research_Studio_Core.py  11_Token_Intelligence.py  12_Knowledge_Graph.py  13_AI_Research_Assistant.py  1_Corpus_Loader.py  2_Statistics_Lab.py  3_DPAS_Validator.py  4_Falsification_Lab.py  5_Node_Alpha.py  6_Manuscript_Viewer.py  7_Node_Beta.py  8_Node_Gamma.py  9_Node_Delta.py
amf_v40/app/styles/: main.css
amf_v40/app/utils/: config.py  state.py
amf_v40/config/: default.yaml
amf_v40/data/: README.md
amf_v40/docs/: dpas_spec.md  future_work_and_replication.md  glossary.md  limitations.md  methodology.md
amf_v40/notebooks/: 01_corpus_exploration.py  02_entropy_analysis.py  03_positional_statistics.py  04_adjacency_markov.py  05_dpas_validation.py
amf_v40/tests/: __init__.py  test_corpus.py  test_dpas.py  test_stats.py  test_validation.py
app/: Home.py
