# ─────────────────────────────────────────────
# AMF v4.0 — pyproject.toml
# Amanuensis Model Framework
# Production Build Configuration
# ─────────────────────────────────────────────

[build-system]

requires = [
    "setuptools>=68",
    "wheel"
]

build-backend = "setuptools.build_meta"

# ─────────────────────────────────────────────
# PROJECT METADATA
# ─────────────────────────────────────────────

[project]

name = "amf-research-suite"

version = "4.0.0"

description = """
Amanuensis Model Framework (AMF)
Computational Manuscript Validation
and Research Environment
"""

readme = "README.md"

requires-python = ">=3.11"

license = { text = "MIT" }

authors = [

    {
        name = "AMF Research Team"
    }

]

keywords = [

    "voynich",
    "manuscript",
    "digital-humanities",
    "computational-linguistics",
    "research",
    "streamlit",
    "nlp",
    "knowledge-graph",
    "manuscript-intelligence"

]

classifiers = [

    "Programming Language :: Python :: 3",

    "Programming Language :: Python :: 3.11",

    "License :: OSI Approved :: MIT License",

    "Operating System :: OS Independent",

    "Framework :: Streamlit",

    "Topic :: Scientific/Engineering",

    "Topic :: Text Processing :: Linguistic"

]

# ─────────────────────────────────────────────
# CORE DEPENDENCIES
# ─────────────────────────────────────────────

dependencies = [

    # CORE SCIENTIFIC STACK

    "numpy==1.26.4",

    "pandas==2.2.1",

    "scipy==1.12.0",

    # STATISTICS

    "statsmodels==0.14.1",

    "powerlaw==1.5",

    # VISUALIZATION

    "matplotlib==3.8.3",

    "plotly==5.19.0",

    "kaleido==0.2.1",

    "Pillow==10.2.0",

    # NETWORK ANALYSIS

    "networkx==3.2.1",

    # STREAMLIT

    "streamlit==1.32.2",

    # NLP

    "nltk==3.8.1",

    # CONFIG

    "pyyaml==6.0.1",

    "pydantic==2.6.1"

]

# ─────────────────────────────────────────────
# OPTIONAL URLS
# ─────────────────────────────────────────────

[project.urls]

Homepage = "https://github.com"

Documentation = "https://github.com"

Repository = "https://github.com"

Issues = "https://github.com"

# ─────────────────────────────────────────────
# SETUPTOOLS
# ─────────────────────────────────────────────

[tool.setuptools]

include-package-data = true

# ─────────────────────────────────────────────
# PACKAGE DISCOVERY
# ─────────────────────────────────────────────

[tool.setuptools.packages.find]

where = ["."]

include = [

    "amf*",
    "app*"

]

# ─────────────────────────────────────────────
# BLACK FORMATTER
# ─────────────────────────────────────────────

[tool.black]

line-length = 88

target-version = ["py311"]

# ─────────────────────────────────────────────
# RUFF LINTER
# ─────────────────────────────────────────────

[tool.ruff]

line-length = 88

target-version = "py311"

# ─────────────────────────────────────────────
# PYTEST
# ─────────────────────────────────────────────

[tool.pytest.ini_options]

testpaths = ["tests"]

python_files = ["test_*.py"]
